apps/pharmacie-blotzheim/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pharmacie-blotzheim
  labels:
    app: pharmacie-blotzheim
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: pharmacie-blotzheim
