apps/pharmacie-blotzheim/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pharmacie-blotzheim-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd
spec:
  rules:
  - host: pharma.lab.kelbert.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pharmacie-blotzheim
            port:
              number: 80
  tls:
    - hosts:
      - pharma.lab.kelbert.fr
      secretName: pharma.lab.kelbert.fr-tls
